# electrophysiology_solver

./: .gitignore  CMakeLists.txt  README.md  applied_current.cpp  applied_current.hpp  common.hpp  ionic.cpp  ionic.hpp  ionic_params.prm  monodomain.cpp  parameters_class.hpp  utils.cpp  utils.hpp
